# trade-comovement

./: .gitignore  1.ipynb  DL_MODEL_GUIDE.md  EXECUTION_STATUS.md  FOLDER_PURPOSE_EXPLANATION.md  FOLDER_STRUCTURE.md  GIT_COMMIT_GUIDE.md  Quantity.py  README.md  README_economy.md  READMEproject.md  annotate_nb.py  cleanup_script.py  critical_fixes_summary.md  economy.ipynb  eda.ipynb  improved_model.py  improved_model_dl.py  improved_model_v2.py  improved_model_v2_with_dl.py  main.py  preprocessing.ipynb  preprocessing.ipynb.bak  preprocessing.refine.bak  preprocessing_cleanup_backup.ipynb  preprocessing_cluaster.ipynb  preprocessing_local.ipynb  pyproject.toml  refine_nb.py  score_improvement_analysis.md  trade_eda.ipynb  국민대_공모전.ipynb
analysis/: README.md  analyze_hs4.ipynb  analyze_hs4.py  analyze_hs4_item_clustering.ipynb  analyze_hs4_item_clustering.py  complete_analysis.ipynb  hs4_supply_chain_ratio.ipynb  hs4_supply_chain_ratio.py  preprocess_ev_battery.ipynb  preprocess_ev_battery.py  preprocessing.ipynb  show_tier_info.ipynb  show_tier_info.py
analysis/archive/: organize_files.ipynb  organize_files.py
config/: requirements.txt  setup_env.md
docs/: INTEGRATION_SUMMARY.md  README.md
models/: README.md  hyperparameter_tuning.py  train_model.py  train_model_ev_battery.ipynb  train_model_ev_battery.py  train_model_original_data.py  train_model_preprocessing.ipynb  train_model_preprocessing.py  train_model_preprocessing_executed.ipynb  train_model_supply_chain.ipynb
reports/: hs4_analysis_report.md  hs4_item_analysis_summary.md  supply_chain_model_summary.md
(+22 files in other folders)
