[project]
name = "daycon-eco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plt>=0.2.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
